[package]
name = "traf_benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "2"
log = "0.4"
pretty_env_logger = "0.3"
traf_client = { version = "0.1", path = "../traf_client" }
rand = "0.8"
