[package]
name = "traf_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
bincode = "1.3"
serde = "1.0"
traf_lib = { version = "0.1", path = "../traf_lib" }
