[package]
name = "traf_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"
traf_lib = { version = "0.1", path = "../traf_lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = "2"
traf_client = { version = "0.1", path = "../traf_client" }
